--- a/manifestquestions.json
+++ b/manifestquestions.json
@@ -76,5 +76,5 @@
   "questions/modules/unit2/anatomy/cell-theory/cell-theory/prokaryote_vs_eukaryote.json",
   "questions/modules/unit2/anatomy/cell-theory/cell-theory/proteins_in_plasma_membrane.json",
   "questions/modules/unit2/energy-work/energy-work/chakras.json",
-  "questions/modules/unit2/energy-work/energy-work/somatic_therapy.json",
+  "questions/modules/unit2/energy-work/energy-work/somatic_therapy.json"
 ]
